some errors are been fixed

--- a/style.css
+++ b/style.css
@@ -55,7 +55,9 @@ font-size: 3.2rem;
     width: 400px;
     border-radius: 8px 8px 0 0;
 }
-
+#exit{
+    cursor: pointer;
+}
 .card-bottom {
     border-radius: 0 0 8px 8px;
     padding: 0 10px;
